address layout issues in about and skills on mobile

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -536,19 +536,56 @@ form button {
     background-size: cover;
   }
 
+  .about .inner-info h1 {
+    font-size: 1.3em;
+    text-align: center;
+  }
+
   .about .inner-info p {
     font-size: .9em;
   }
 
+  .skills .skill-container {
+    flex-direction: column-reverse;
+    flex-wrap: nowrap;
+  }
+
+  .skills .skill-nav {
+    left:50%;
+  }
+
+  .skills .wrapper {
+    width: 90%;
+  }
+
+  .skills .rule {
+    display: none;
+  }
+
   .skills .wrapper-a h1 {
-    font-size: 1.5em;
-    text-align: center;
-    margin-top:.5em;
+    font-size: 1.3em;
+    text-align: left;
+    margin-top:-7.5em;
+    left: 0;
+    top: 1em;
+    right:auto;
   }
 
   .skills .skill-info {
-    padding: 12.25em 0 3.5em 0;
     font-size: .95em;
+    text-align: right;
+    padding: 50px 8% 250px 0;
+  }
+
+  .skills .skill-img-container {
+    margin-left: 15px;
+  }
+
+  .skills .img-group {
+    padding: 285px 0 30px 0;
+    justify-content: space-around;
+    width: 50%;
+    margin: 0 auto
   }
 
   .projects .project-image {
@@ -606,7 +643,7 @@ form button {
   .contact .form-right button {
     font-size: .95em;
     margin-bottom: 0;
-    width:30%;
+    width:40%;
   }
 
   .contact .form-right .links {
